Suport stability levels in tests